# wikiArchitect

./: .gitignore  LICENSE  README.md  debug_vss.py  implementation plan.md  main.py  pyproject.toml  security_report.txt  task.md
.github/workflows/: release.yml
docs/: IMPLEMENTATION_STRATEGY.md  USER_GUIDE.md  WALKTHROUGH.md  index.md
docs/explanations/: concepts.md  philosophy.md  privacy-security.md
docs/how-to/: build-system.md  usage-guide.md  use-librarian.md
docs/reference/: schema-templates.md  security-specs.md  tasks.md
docs/tutorials/: first-qa.md  getting-started.md
scripts/: build.py  build_macos.sh  installer.nsi
src/: main.py
src/core/: agent.py  autonomous_architect.py  graph_generator.py  path_utils.py  pdf_extractor.py  search.py  semantic_engine.py
src/ui/: diff_viewer.py  main_frame.py
tests/: test_core.py
vault/: Thought_A.md  Thought_B.md
vault/.wiki/: semantic.db
vault/schema/: CLAUDE.md  MOC_TEMPLATE.md
wiki/: index.md  log.md
