[project]
name = "wikiarchitech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "httpx>=0.28.1",
    "markdown2>=2.5.5",
    "ollama>=0.6.1",
    "pypdf>=6.9.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlite-vec>=0.1.6",
    "watchdog>=6.0.0",
    "wxpython>=4.2.5",
    "nuitka>=2.6.7",
]
